--- a/personal-website-finals-webprog/public/index.html
+++ b/personal-website-finals-webprog/public/index.html
@@ -8,7 +8,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Luckiest+Guy&display=swap" rel="stylesheet">
     
-    <title>Joshmar | The Grand Line Portfolio</title>
+    <title>Joshmar Clavero | The Grand Line Portfolio</title>
   </head>
   <body>
     <noscript>
