UPDATED ALL LINKS TO WORK PERFECTLY

--- a/personal-website-finals-webprog/public/index.html
+++ b/personal-website-finals-webprog/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>mylogo.ico">
     
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Luckiest+Guy&display=swap" rel="stylesheet">
     
-    <title>Joshmar Clavero | The Grand Line Portfolio</title>
+    <title>Joshmar Clavero | FINAL PERSONAL WEBSITE</title>
   </head>
   <body>
     <noscript>
